@@ -1,6 +1,9 @@
 2006-10-20  Brian Bidulock  <bidulock@openss7.org>
 
-	* src/drivers/sctp2.c: strap out ETSI SACK frequency for testing
+	* src/drivers/sctp2.c:
+	  - strap out ETSI SACK frequency for testing
+	  - corrections for zero-length messages
+	  - QR_TRIMMED tweaks
 
 2006-10-19  Brian Bidulock  <bidulock@openss7.org>
 
